# pizza-price-ai

./: .pylintrc  ai.ipynb  main.py  pyproject.toml
src/: app.py  model.py
