[project]
name = "pizza-value"
version = "0.1.0"
description = ""
authors = [
    {name = "anatfernandes",email = "analuizateixeirafernandes184@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
